--- a/app/src/main/res/layout/base_toolbar_layout.xml
+++ b/app/src/main/res/layout/base_toolbar_layout.xml
@@ -37,6 +37,7 @@
                     android:id="@+id/tvToolbarTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="16sp"
                     android:ellipsize="end"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center_vertical"
@@ -44,7 +45,8 @@
                     android:paddingLeft="6dp"
                     android:text="Title"
                     android:textColor="?attr/textWhiteColor"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
